✨ feat: 공고 기능 이미지 추가 (#128)
* 🐛 fix: Announcement 에서 Image 추가 및 Attachment 제거

* :sparkles: feat: 공고 Request 및 Response 추가

* feat: 공고 작성 시 이미지 추가

* fix: 공고 이미지 응답 형식 변경

* fix: 공고 수정 시 이미지 추가

---------

Co-authored-by: 이소정 <xxoznge@isojeong-ui-MacBookPro.local>