@@ -1,22 +1,25 @@
 package com.sponus.sponusbe.domain.announcement.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
 import com.sponus.sponusbe.domain.announcement.dto.request.AnnouncementCreateRequest;
 import com.sponus.sponusbe.domain.announcement.dto.request.AnnouncementUpdateRequest;
 import com.sponus.sponusbe.domain.announcement.dto.response.AnnouncementCreateResponse;
-import com.sponus.sponusbe.domain.announcement.dto.response.AnnouncementResponse;
+import com.sponus.sponusbe.domain.announcement.dto.response.AnnouncementDetailResponse;
+import com.sponus.sponusbe.domain.announcement.dto.response.AnnouncementSummaryResponse;
 import com.sponus.sponusbe.domain.announcement.dto.response.AnnouncementUpdateResponse;
 import com.sponus.sponusbe.domain.announcement.entity.Announcement;
+import com.sponus.sponusbe.domain.announcement.entity.AnnouncementImage;
 import com.sponus.sponusbe.domain.announcement.entity.enums.AnnouncementStatus;
 import com.sponus.sponusbe.domain.announcement.exception.AnnouncementErrorCode;
 import com.sponus.sponusbe.domain.announcement.exception.AnnouncementException;
 import com.sponus.sponusbe.domain.announcement.repository.AnnouncementRepository;
 import com.sponus.sponusbe.domain.organization.entity.Organization;
+import com.sponus.sponusbe.domain.s3.S3Service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -28,26 +31,30 @@ import lombok.extern.slf4j.Slf4j;
 public class AnnouncementService {
 
 	private final AnnouncementRepository announcementRepository;
+	private final S3Service s3Service;
 
 	public AnnouncementCreateResponse createAnnouncement(
 		Organization authOrganization,
-		AnnouncementCreateRequest request) {
-		final Announcement announcement = announcementRepository.save(request.toEntity(authOrganization));
-		return AnnouncementCreateResponse.from(announcement);
+		AnnouncementCreateRequest request,
+		List<MultipartFile> images
+	) {
+		final Announcement announcement = request.toEntity(authOrganization);
+		setAnnouncementImages(images, announcement);
+		return AnnouncementCreateResponse.from(announcementRepository.save(announcement));
 	}
 
-	public AnnouncementResponse getAnnouncement(Long announcementId) {
+	public AnnouncementDetailResponse getAnnouncement(Long announcementId) {
 		Announcement announcement = announcementRepository.findById(announcementId)
 			.orElseThrow(() -> new AnnouncementException(AnnouncementErrorCode.ANNOUNCEMENT_NOT_FOUND));
 		announcement.increaseViewCount();
-		return AnnouncementResponse.from(announcement);
+		return AnnouncementDetailResponse.from(announcement);
 	}
 
-	public List<AnnouncementResponse> getListAnnouncement(AnnouncementStatus status) {
+	public List<AnnouncementSummaryResponse> getListAnnouncement(AnnouncementStatus status) {
 		List<Announcement> announcements = announcementRepository.findByStatus(status);
 		return announcements.stream()
-			.map(AnnouncementResponse::from)
-			.collect(Collectors.toList());
+			.map(AnnouncementSummaryResponse::from)
+			.toList();
 	}
 
 	public void deleteAnnouncement(Organization organization, Long announcementId) {
@@ -59,8 +66,12 @@ public class AnnouncementService {
 		announcementRepository.delete(announcement);
 	}
 
-	public AnnouncementUpdateResponse updateAnnouncement(Organization authOrganization, Long proposeId,
-		AnnouncementUpdateRequest request) {
+	public AnnouncementUpdateResponse updateAnnouncement(
+		Organization authOrganization,
+		Long proposeId,
+		AnnouncementUpdateRequest request,
+		List<MultipartFile> images
+	) {
 		final Announcement announcement = announcementRepository.findById(proposeId)
 			.orElseThrow(() -> new AnnouncementException(AnnouncementErrorCode.ANNOUNCEMENT_NOT_FOUND));
 
@@ -69,13 +80,27 @@ public class AnnouncementService {
 		if (!isOrganizationsAnnouncement(authOrganization.getId(), announcement))
 			throw new AnnouncementException(AnnouncementErrorCode.INVALID_ORGANIZATION);
 
-		announcement.update(request.title(), request.type(), request.category(), request.content(), request.status());
+		announcement.updateInfo(request.title(), request.type(), request.category(), request.content(),
+			request.status());
+		setAnnouncementImages(images, announcement);
 		announcementRepository.save(announcement);
 		return AnnouncementUpdateResponse.from(announcement);
 	}
 
 	private boolean isOrganizationsAnnouncement(Long organizationId, Announcement announcement) {
 		return announcement.getWriter().getId().equals(organizationId);
+	}
+
+	private void setAnnouncementImages(List<MultipartFile> images, Announcement announcement) {
+		announcement.getAnnouncementImages().clear();
+		images.forEach(image -> {
+			final String url = s3Service.uploadFile(image);
+			AnnouncementImage announcementImage = AnnouncementImage.builder()
+				.name(image.getOriginalFilename())
+				.url(url)
+				.build();
+			announcementImage.setAnnouncement(announcement);
+		});
 	}
 
 }
